--- a/.gitignore
+++ b/.gitignore
@@ -14,6 +14,7 @@
 /fileadmin/_processed_/
 /fileadmin/*.t3d
 /uploads/
+/fileadmin/templates/config.codekit
 
 # Ignore cache
 /typo3conf/temp_CACHED*
